# manga_colorization_v2_qweasdd

./: .gitignore  pyproject.toml  readme.md
src/manga_color_v2/: colorizator.py  inference.py
src/manga_color_v2/denoising/: denoiser.py  functions.py  models.py
src/manga_color_v2/networks/: extractor.py  models.py
src/manga_color_v2/utils/: utils.py
